samples/_failures_safe/1761633816_6d1005_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f111938.c: In function ‘main’:
./samples/SAFE/__tmp_6f111938.c:191:12: error: missing terminating " character
  191 |     printf("Available events: 0=START, 1=DATA,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6f111938.c:191:5: error: expected expression at end of input
  191 |     printf("Available events: 0=START, 1=DATA,
      |     ^~~~~~
./samples/SAFE/__tmp_6f111938.c:191:5: error: expected declaration or statement at end of input
